@@ -2061,12 +2061,31 @@ literal|"org.apache.hadoop.yarn.FileSystemBasedConfigurationProvider"
 argument_list|)
 expr_stmt|;
 name|String
-name|user
+index|[]
+name|defaultTestUserGroups
+init|=
+block|{
+literal|"dummy_group1"
+block|,
+literal|"dummy_group2"
+block|}
+decl_stmt|;
+name|UserGroupInformation
+name|ugi
 init|=
 name|UserGroupInformation
 operator|.
-name|getCurrentUser
-argument_list|()
+name|createUserForTesting
+argument_list|(
+literal|"dummyUser"
+argument_list|,
+name|defaultTestUserGroups
+argument_list|)
+decl_stmt|;
+name|String
+name|user
+init|=
+name|ugi
 operator|.
 name|getUserName
 argument_list|()
@@ -2083,19 +2102,43 @@ argument_list|<
 name|String
 argument_list|>
 argument_list|(
-name|Groups
-operator|.
-name|getUserToGroupsMappingService
-argument_list|(
-name|configuration
-argument_list|)
-operator|.
-name|getGroups
-argument_list|(
-name|user
-argument_list|)
+literal|2
 argument_list|)
 decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|ugi
+operator|.
+name|getGroupNames
+argument_list|()
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|groupWithInit
+operator|.
+name|add
+argument_list|(
+name|ugi
+operator|.
+name|getGroupNames
+argument_list|()
+index|[
+name|i
+index|]
+argument_list|)
+expr_stmt|;
+block|}
 comment|// upload default configurations
 name|uploadDefaultConfiguration
 argument_list|()
